fixed alignment

--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -17,7 +17,10 @@ body {
 			.mobile-icon {
 				.mobile-items {
 					background: #BF7359;
-
+					
+					.mobile-item[data-nav='how-it-works'], .mobile-item[data-nav='team'] {
+						display: none;
+					}
 					.mobile-item {
 
 						a {
